--- a/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/16-NLP-with-RNNs-and-Attention/v2_generating_text_using_character_rnn.ipynb
+++ b/hands-on-machine-learning-with-scikit-learn-keras-and-tensorflow/16-NLP-with-RNNs-and-Attention/v2_generating_text_using_character_rnn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwDWwPRKE02db7uTAwJjCZ",
+      "authorship_tag": "ABX9TyME0BVqo/CODVfRb7hlVZ5A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N_WqqSZelUFW",
-        "outputId": "2aa077a4-bdc2-4783-8b17-b5c47ca1ce16"
+        "outputId": "06fecdf9-5ca6-4b66-8265-c629a7b5d8ea"
       },
       "execution_count": 2,
       "outputs": [
@@ -154,7 +154,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5T7KPUtilsRo",
-        "outputId": "443a2852-c41f-470e-ffaa-53b027156f4e"
+        "outputId": "184ed8ab-a5ff-4bb0-8a1f-466e282d8179"
       },
       "execution_count": 3,
       "outputs": [
@@ -183,7 +183,7 @@
           "height": 35
         },
         "id": "9uveR0YmUFwh",
-        "outputId": "2de3c9d5-80a9-474e-ee04-3dac94081975"
+        "outputId": "8f11b022-073e-44a6-d63c-e6c75c8e5991"
       },
       "execution_count": 4,
       "outputs": [
@@ -221,7 +221,7 @@
       "metadata": {
         "id": "dxqbhUeAUfWK"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -250,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HP85WH2wVS4z",
-        "outputId": "1484c337-a306-4397-e498-b62906cee2e2"
+        "outputId": "a3506315-77ad-4fa6-b8f1-38ea52434c36"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +288,7 @@
       "metadata": {
         "id": "PGHTiZrvXZmv"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -303,9 +303,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GasjhdJaZgDe",
-        "outputId": "c6b0bd1a-fa5d-4dd2-a0e0-dba42af6bfdf"
+        "outputId": "d037a2e2-48c0-4d5d-eb57-0d1c06a8f1a1"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +316,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 8
         }
       ]
     },
@@ -330,9 +330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3dnFoBZ6Z8_8",
-        "outputId": "f7b0fb52-948f-4148-bf29-6294b044910f"
+        "outputId": "59b1bc1f-b80f-4a00-eaff-64a140c9b3d6"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +363,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 9
         }
       ]
     },
@@ -389,7 +389,7 @@
       "metadata": {
         "id": "nILzO6EMZYbb"
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -407,120 +407,65 @@
         "id": "B3VfK0wp-LuD"
       },
       "source": [
-        "To predict the next character based on the previous 100 characters, we can use an RNN with 2 GRU layers of 128 units each and 20% dropout on both the inputs (dropout) and the hidden states (recurrent_dropout). We can tweak these hyperparameters\n",
-        "later, if needed. The output layer is a time-distributed Dense layer.\n",
-        "\n",
-        "This time this layer must have 39 units (max_id) because there are 39 distinct characters in the text, and we want to output a probability for each possible character (at each time step). The output probabilities should sum up to 1 at each time step, so we apply the softmax activation function to the outputs of the Dense layer. \n",
-        "\n",
-        "We can then compile this model, using the \"sparse_categorical_crossentropy\" loss and an Adam optimizer."
+        "Let’s build and train\n",
+        "a model with one GRU layer composed of 128 units."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "J5_bM7ns-Ef1",
-        "outputId": "bd1b9f47-bb8b-4f15-a1b5-8f93c68acdfe",
+        "outputId": "4b184fcd-bbd4-4196-eb1b-63fc234c6747",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 266
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
+        "tf.random.set_seed(42)\n",
+        "\n",
         "model = keras.models.Sequential([\n",
-        "    keras.layers.GRU(128, return_sequences=True, input_shape=[None, max_id]),\n",
+        "    keras.layers.Embedding(input_dim=n_tokens, output_dim=16),\n",
         "    keras.layers.GRU(128, return_sequences=True),\n",
-        "    keras.layers.TimeDistributed(keras.layers.Dense(max_id, activation='softmax'))                            \n",
+        "    keras.layers.Dense(n_tokens, activation='softmax')                            \n",
         "])\n",
         "\n",
         "model.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
+            " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            "gru (GRU)                    (None, None, 128)         64896     \n",
-            "_________________________________________________________________\n",
-            "gru_1 (GRU)                  (None, None, 128)         99072     \n",
-            "_________________________________________________________________\n",
-            "time_distributed (TimeDistri (None, None, 39)          5031      \n",
+            " embedding (Embedding)       (None, None, 16)          624       \n",
+            "                                                                 \n",
+            " gru (GRU)                   (None, None, 128)         56064     \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, None, 39)          5031      \n",
+            "                                                                 \n",
             "=================================================================\n",
-            "Total params: 168,999\n",
-            "Trainable params: 168,999\n",
+            "Total params: 61,719\n",
+            "Trainable params: 61,719\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NofAusbtDkBI",
-        "outputId": "8c62d782-50d8-4ba2-fe36-ecd16008d9b9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 212
-        }
+        "id": "NofAusbtDkBI"
       },
       "source": [
-        "model.compile(loss='sparse_categorical_crossentropy', optimizer='adam')\n",
+        "model.compile(loss='sparse_categorical_crossentropy', optimizer='nadam', metrics=[\"accuracy\"])\n",
         "\n",
-        "history = model.fit(dataset, steps_per_epoch=train_size // batch_size, epochs=5)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Train for 31370 steps\n",
-            "Epoch 1/5\n",
-            "31370/31370 [==============================] - 478s 15ms/step - loss: 0.9566\n",
-            "Epoch 2/5\n",
-            "31370/31370 [==============================] - 467s 15ms/step - loss: 0.9603\n",
-            "Epoch 3/5\n",
-            "31370/31370 [==============================] - 466s 15ms/step - loss: 1.0236\n",
-            "Epoch 4/5\n",
-            "31370/31370 [==============================] - 462s 15ms/step - loss: 1.0744\n",
-            "Epoch 5/5\n",
-            "31370/31370 [==============================] - 484s 15ms/step - loss: 1.1023\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hAzn3WV2Or79"
-      },
-      "source": [
-        "## Using the Char-RNN Model"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gQYwTAGmOtL1"
-      },
-      "source": [
-        "Now we have a model that can predict the next character in text written by Shakespeare. To feed it some text, we first need to preprocess it like we did earlier, so let’s create a little function for this:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jHxJq8dkD0JX"
-      },
-      "source": [
-        "def preprocess(texts):\n",
-        "  X = np.array(tokenizer.texts_to_sequences(texts)) - 1\n",
-        "  return tf.one_hot(X, max_id)"
+        "model_ckpt = keras.callbacks.ModelCheckpoint(\"my_shakespeare_model\", monitor=\"val_accuracy\", save_best_only=True)\n",
+        "history = model.fit(train_set, validation_data=valid_set, epochs=10, callbacks=[model_ckpt])"
       ],
       "execution_count": null,
       "outputs": []
@@ -528,79 +473,154 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "isDhjrcg8cFY"
+        "id": "gQYwTAGmOtL1"
       },
       "source": [
-        "Now let’s use the model to predict the next letter in some text:"
+        "Let's handle text preprocessing."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "shakespeare_model = keras.Sequential([\n",
+        "    text_vec_layer,\n",
+        "    keras.layers.Lambda(lambda x: x - 2),  # no <PAD> or <UNK> tokens\n",
+        "    model\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "XwLd181kIQ4B"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "And now let’s use it to predict the next character in a sentence."
+      ],
+      "metadata": {
+        "id": "acbjr3jIIrO4"
+      }
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "I0i58Gcz8c2m",
-        "outputId": "d9b48c3e-ce88-4866-970f-8eb8e8b3fb2a",
+        "outputId": "efaf5bb0-29bd-4a05-c12f-b6bef39b2e04",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 52
         }
       },
       "source": [
-        "X_new = preprocess(['How are yo'])\n",
-        "Y_pred = model.predict_classes(X_new)\n",
-        "tokenizer.sequences_to_texts(Y_pred + 1)[0][-1]  # 1st sentence, last char"
+        "y_proba = shakespeare_model.predict([\"To be or not to b\"])[0, -1]\n",
+        "# choose the most probable character ID\n",
+        "y_pred = tf.argmax(y_proba)\n",
+        "text_vec_layer.get_vocabulary()[y_pred + 2]"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 392ms/step\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'u'"
-            ]
+              "'e'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "y_proba = shakespeare_model.predict([\"I love yo\"])[0, -1]\n",
+        "# choose the most probable character ID\n",
+        "y_pred = tf.argmax(y_proba)\n",
+        "text_vec_layer.get_vocabulary()[y_pred + 2]"
+      ],
       "metadata": {
-        "id": "wfH1n6iM9Iqr",
-        "outputId": "0b6c564f-189b-4534-a7fa-f01bb36f0450",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+          "height": 52
+        },
+        "id": "F4VcDW-8Zav9",
+        "outputId": "ac8d09f5-95c1-45e5-f7c1-d6cb5d21bed3"
       },
-      "source": [
-        "tokenizer.sequences_to_texts(Y_pred + 1)[0]  # # 1st sentence, all chars"
-      ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 29ms/step\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'e u   s   e   t o u'"
-            ]
+              "'u'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ug86x-C889QC"
-      },
+      "cell_type": "code",
       "source": [
-        "Success! The model guessed right. Now let’s use this model to generate new text."
+        "y_proba = shakespeare_model.predict([\"Where are you goin\"])[0, -1]\n",
+        "# choose the most probable character ID\n",
+        "y_pred = tf.argmax(y_proba)\n",
+        "text_vec_layer.get_vocabulary()[y_pred + 2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "id": "kl-YgVJoZmqN",
+        "outputId": "8bb61661-fdf4-4f46-a378-8d696027db11"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 27ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'g'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
       ]
     },
     {
