--- a/machine-learning-with-pytorch-and-scikit-learn/05_compressing_data_via_dimensionality_reduction.ipynb
+++ b/machine-learning-with-pytorch-and-scikit-learn/05_compressing_data_via_dimensionality_reduction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPuf1ke93dyoqheMYXnfGgb",
+      "authorship_tag": "ABX9TyMtqaOiIvUPMTpRz/btVmMo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,7 +134,7 @@
           "height": 305
         },
         "id": "VsCHY3p3SnZL",
-        "outputId": "1ecda495-2c1e-460d-d4ae-aab1eed7f875"
+        "outputId": "c8bb172f-ddd7-4faf-b75e-fa7ff4bc46c8"
       },
       "execution_count": 3,
       "outputs": [
@@ -165,7 +165,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0a82c9d7-e639-4102-863c-38331768405f\">\n",
+              "  <div id=\"df-c3805d7b-c62c-4aaa-a28f-87b5ec9ecde5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -290,7 +290,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a82c9d7-e639-4102-863c-38331768405f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c3805d7b-c62c-4aaa-a28f-87b5ec9ecde5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -341,12 +341,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0a82c9d7-e639-4102-863c-38331768405f button.colab-df-convert');\n",
+              "          document.querySelector('#df-c3805d7b-c62c-4aaa-a28f-87b5ec9ecde5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0a82c9d7-e639-4102-863c-38331768405f');\n",
+              "          const element = document.querySelector('#df-c3805d7b-c62c-4aaa-a28f-87b5ec9ecde5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -376,13 +376,51 @@
     {
       "cell_type": "code",
       "source": [
-        "# Splitting the data into 70% training and 30% test subsets.\n"
+        "# Splitting the data into 70% training and 30% test subsets.\n",
+        "X, y = df_wine.iloc[:, 1:], df_wine.iloc[:, 0]\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.3, stratify=y, random_state=0)\n",
+        "\n",
+        "# standardize the features\n",
+        "sc = StandardScaler()\n",
+        "x_train_std = sc.fit_transform(x_train)\n",
+        "x_test_std = sc.fit(x_test)"
       ],
       "metadata": {
         "id": "8yyo_9cUTIdl"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's compute the covariance matrix\n",
+        "cov_matrix = np.cov(x_train_std.T)\n",
+        "# performe the eigendecomposition\n",
+        "eigen_vals, eigen_vecs = np.linalg.eig(cov_matrix)\n",
+        "print(f\"Eigenvalues \\n{eigen_vals}\")"
+      ],
+      "metadata": {
+        "id": "4Jveb6YpZi-4",
+        "outputId": "a65ae65a-0a3d-40ee-bef8-ee4da02998f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Eigenvalues \n",
+            "[4.84274532 2.41602459 1.54845825 0.96120438 0.84166161 0.6620634\n",
+            " 0.51828472 0.34650377 0.3131368  0.10754642 0.21357215 0.15362835\n",
+            " 0.1808613 ]\n"
+          ]
+        }
+      ]
     }
   ]
 }
