--- a/machine-learning-with-pytorch-and-scikit-learn/05_compressing_data_via_dimensionality_reduction.ipynb
+++ b/machine-learning-with-pytorch-and-scikit-learn/05_compressing_data_via_dimensionality_reduction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO9M5SmnHhs3n4g1GbiA8VL",
+      "authorship_tag": "ABX9TyP3cHCwVdJRHXe5Y+Q95vx4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "r4SXW_3NRlit"
       },
-      "execution_count": 29,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
       "metadata": {
         "id": "FkvkbOVyDbwM"
       },
-      "execution_count": 30,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "oer5RdwGSW1M"
       },
-      "execution_count": 31,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -179,9 +179,9 @@
           "height": 305
         },
         "id": "VsCHY3p3SnZL",
-        "outputId": "e81d6c31-ff25-4a03-ee38-e470c7009996"
+        "outputId": "2a708231-32b3-495d-d738-cbb3fdbed19c"
       },
-      "execution_count": 32,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +210,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ef185682-ac69-4e2d-a452-cce7a0caab02\">\n",
+              "  <div id=\"df-e4e09ad5-3f7a-4516-a6cc-6b65a0405fe9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -335,7 +335,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ef185682-ac69-4e2d-a452-cce7a0caab02')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e4e09ad5-3f7a-4516-a6cc-6b65a0405fe9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -386,12 +386,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ef185682-ac69-4e2d-a452-cce7a0caab02 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e4e09ad5-3f7a-4516-a6cc-6b65a0405fe9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ef185682-ac69-4e2d-a452-cce7a0caab02');\n",
+              "          const element = document.querySelector('#df-e4e09ad5-3f7a-4516-a6cc-6b65a0405fe9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -414,7 +414,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 4
         }
       ]
     },
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "8yyo_9cUTIdl"
       },
-      "execution_count": 33,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -448,12 +448,12 @@
       ],
       "metadata": {
         "id": "4Jveb6YpZi-4",
-        "outputId": "105423da-9b3c-4b6c-f66f-81ad6a82c5a5",
+        "outputId": "623cd378-5616-4782-b506-786202385957",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
       "metadata": {
         "id": "UR-feACCgtah"
       },
-      "execution_count": 35,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -504,13 +504,13 @@
       ],
       "metadata": {
         "id": "YuZco2VRiGCp",
-        "outputId": "61394463-d424-4a1e-fcea-4b18b418bb68",
+        "outputId": "0a38561a-71c1-43fc-84f5-a07d83746f3f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
         }
       },
-      "execution_count": 36,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -546,7 +546,7 @@
       "metadata": {
         "id": "TRw4avvgjLgV"
       },
-      "execution_count": 37,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -557,12 +557,12 @@
       ],
       "metadata": {
         "id": "Ym-_jTlQsxS7",
-        "outputId": "4f6cd538-ad3e-4a56-c31c-afe752611382",
+        "outputId": "439ec3e4-ac14-441b-c7d6-b32dae5dfc0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,12 +593,12 @@
       ],
       "metadata": {
         "id": "0XBEHOpcthhZ",
-        "outputId": "cf749c29-89c0-4a20-8f60-f8a1c16b0e19",
+        "outputId": "8e7dbfa2-687d-490f-9c4c-cd341494e50c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,7 +608,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 11
         }
       ]
     },
@@ -620,7 +620,7 @@
       "metadata": {
         "id": "ryBsP1iEtp2j"
       },
-      "execution_count": 40,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -640,13 +640,13 @@
       ],
       "metadata": {
         "id": "OmMg1qu6tyGQ",
-        "outputId": "19b789cc-1087-496d-ddcb-8391ad2bbed6",
+        "outputId": "c10be856-6fcc-4011-c124-77f23973d966",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
         }
       },
-      "execution_count": 41,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -683,12 +683,12 @@
       ],
       "metadata": {
         "id": "JDOQIvbeJd7l",
-        "outputId": "f47b2e77-8cbf-4fbb-8519-80a0f84af4dc",
+        "outputId": "0023a428-b437-4a38-fa2b-8657d5b67bfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,7 +700,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 14
         }
       ]
     },
@@ -715,13 +715,13 @@
       ],
       "metadata": {
         "id": "kG1KwEFkJ5Ky",
-        "outputId": "0ac1c7a4-f227-424a-c2c9-98ae91488376",
+        "outputId": "aabf9f44-f2ec-4b62-f5df-07b326a61dc7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
         }
       },
-      "execution_count": 43,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -754,13 +754,13 @@
       ],
       "metadata": {
         "id": "0dvh8IKpKgLK",
-        "outputId": "530c8d4d-a689-4902-d5a1-a7d6053d661c",
+        "outputId": "a7be55bd-e435-4da2-8bf3-cd4955544d4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
         }
       },
-      "execution_count": 44,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -798,13 +798,13 @@
       ],
       "metadata": {
         "id": "KikC4Xmru0cm",
-        "outputId": "cc351d10-73b0-4e38-8244-56010c1dee3c",
+        "outputId": "32399523-76a0-4a21-a9c6-3015be036456",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
         }
       },
-      "execution_count": 45,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -833,13 +833,13 @@
       ],
       "metadata": {
         "id": "3B321WA1IOts",
-        "outputId": "3c2aa1b1-57fd-4fcd-c8bd-6391acf1d201",
+        "outputId": "6e506c32-1443-40af-d1a5-d2f3fdca3912",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
         }
       },
-      "execution_count": 46,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -866,12 +866,12 @@
       ],
       "metadata": {
         "id": "WW6DZ5R_NZ_T",
-        "outputId": "a466f8c7-2db7-45e4-90cb-b32ca3f43657",
+        "outputId": "6940b34c-5b1f-4210-dc75-6f4d9f133b3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +883,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 19
         }
       ]
     },
@@ -905,7 +905,7 @@
       "metadata": {
         "id": "VuWOLTHqOLpC"
       },
-      "execution_count": 48,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -925,13 +925,13 @@
       ],
       "metadata": {
         "id": "tCIOawvFO01r",
-        "outputId": "9c1f4bf4-02c1-44cd-8a9a-9b19a3608b5e",
+        "outputId": "2fce5045-93dd-459a-a067-c88f5a66da92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
         }
       },
-      "execution_count": 49,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -964,12 +964,12 @@
       ],
       "metadata": {
         "id": "2prHDvQXP7pU",
-        "outputId": "97644ced-29af-4a0d-a85d-4d4c3e68a408",
+        "outputId": "f54cf2c0-3551-4d2c-ae78-fe13b93ed06e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -981,7 +981,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 22
         }
       ]
     },
@@ -1005,13 +1005,13 @@
       ],
       "metadata": {
         "id": "gCTJQ0FFQP3G",
-        "outputId": "f2a8b9c8-90db-495d-bfbf-d83b222642b0",
+        "outputId": "1c351e12-00ba-4e98-849e-27ca26509e05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
         }
       },
-      "execution_count": 51,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1034,12 +1034,12 @@
       ],
       "metadata": {
         "id": "pCNbM7pzQlHt",
-        "outputId": "b34961c4-c7a0-44e8-a7c1-c56af575b884",
+        "outputId": "197cee8b-b17c-4d82-ead2-f305b4785b4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1051,7 +1051,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 24
         }
       ]
     },
@@ -1063,6 +1063,193 @@
       "metadata": {
         "id": "Bt--5vHWSCRZ"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Computing the scatter matrices"
+      ],
+      "metadata": {
+        "id": "GV31iEm1EA8h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the mean vectors for each class\n",
+        "np.set_printoptions(precision=4)\n",
+        "\n",
+        "mean_vecs = []\n",
+        "for label in range(1, 4):\n",
+        "  mean_vecs.append(np.mean(x_train_std[y_train == label], axis=0))\n",
+        "  print(f\"MV {label}: {mean_vecs[label - 1]}\\n\")"
+      ],
+      "metadata": {
+        "id": "WNobzyEJEB5q",
+        "outputId": "a07ddf6b-9d4a-4b44-b869-6da948f70b71",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MV 1: [ 0.9066 -0.3497  0.3201 -0.7189  0.5056  0.8807  0.9589 -0.5516  0.5416\n",
+            "  0.2338  0.5897  0.6563  1.2075]\n",
+            "\n",
+            "MV 2: [-0.8749 -0.2848 -0.3735  0.3157 -0.3848 -0.0433  0.0635 -0.0946  0.0703\n",
+            " -0.8286  0.3144  0.3608 -0.7253]\n",
+            "\n",
+            "MV 3: [ 0.1992  0.866   0.1682  0.4148 -0.0451 -1.0286 -1.2876  0.8287 -0.7795\n",
+            "  0.9649 -1.209  -1.3622 -0.4013]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compute the within-class scatter matrix\n",
+        "d = 13  # number of features\n",
+        "S_W = np.zeros((d, d))\n",
+        "\n",
+        "for label, mv in zip(range(1, 4), mean_vecs):\n",
+        "  class_scatter = np.zeros((d, d))  # scatter matrix for each class\n",
+        "  for row in x_train_std[y_train == label]:\n",
+        "    row, mv = row.reshape(d, 1), mv.reshape(d, 1)  # make column vectors\n",
+        "    class_scatter += (row - mv).dot((row - mv).T)\n",
+        "  S_W += class_scatter  # sum class scatter matrices\n",
+        "\n",
+        "print(f\"Within-class scatter matrix: {S_W.shape[0]}x{S_W.shape[1]}\")"
+      ],
+      "metadata": {
+        "id": "0gm0XH6kEvg4",
+        "outputId": "bd3154ef-a11b-40a6-b2e4-1c60d048cb64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Within-class scatter matrix: 13x13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Better: covariance matrix since classes are not equally distributed\n",
+        "print(f\"Class label distribution: {np.bincount(y_train)[1:]}\")"
+      ],
+      "metadata": {
+        "id": "bMxhpFM2HDmd",
+        "outputId": "414957e4-b547-418b-ca22-6818fbf49460",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Class label distribution: [41 50 33]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = 13  # number of features\n",
+        "S_W = np.zeros((d, d))\n",
+        "\n",
+        "for label, mv in zip(range(1, 4), mean_vecs):\n",
+        "  class_scatter = np.cov(x_train_std[y_train == label].T) \n",
+        "  S_W += class_scatter  # sum class scatter matrices\n",
+        "\n",
+        "print(f\"Within-class scatter matrix: {S_W.shape[0]}x{S_W.shape[1]}\")"
+      ],
+      "metadata": {
+        "id": "s2zpGN7dHf6Q",
+        "outputId": "958c4e5f-13c7-4f9e-ecfc-b6496bd46df4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Within-class scatter matrix: 13x13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compute the between-class scatter matrix\n",
+        "mean_overall = np.mean(x_train_std, axis=0)\n",
+        "mean_overall = mean_overall.reshape(d, 1)   # make column vector\n",
+        "\n",
+        "d = 13  # number of features\n",
+        "S_B = np.zeros((d, d))\n",
+        "\n",
+        "for i, mean_vec in enumerate(mean_vecs):\n",
+        "  n = x_train_std[y_train == i + 1, :].shape[0]\n",
+        "  mean_vec = mean_vec.reshape(d, 1)  # make column vectors\n",
+        "  S_B += n * (mean_vec - mean_overall).dot((mean_vec - mean_overall).T)\n",
+        "\n",
+        "print(f\"Between-class scatter matrix:: {S_B.shape[0]}x{S_B.shape[1]}\")"
+      ],
+      "metadata": {
+        "id": "3k1e28BeH35a",
+        "outputId": "f3827c57-687f-40e5-a6bc-809f8a8c2773",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Between-class scatter matrix:: 13x13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Selecting linear discriminants for the new feature subspace"
+      ],
+      "metadata": {
+        "id": "U2Ge7RP7JRYf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FTaOTl7vJSCj"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
