--- a/ applied-machine-learning/6-principal-component-analysis/01_PCA.ipynb
+++ b/ applied-machine-learning/6-principal-component-analysis/01_PCA.ipynb
@@ -16,7 +16,7 @@
         "id": "Zk5Cr0jQbVQd"
       },
       "source": [
-        "# Principal Component Analysis (PCA)"
+        "## Principal Component Analysis (PCA)"
       ]
     },
     {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "yw7N1KVPb9pF"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "Y_oTjaLCbVQq",
         "outputId": "d4f6eb79-c55a-422b-a9f5-538a5784e8b2",
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "DSKU0KL6bVQ2",
         "outputId": "32865649-72f0-4c57-f449-0d9d0e6b6e21",
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "kX1B_7dQbVQ7",
         "outputId": "575371c0-d445-4f17-d536-e20f188d1c68",
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "in1OHO7wbVRs",
         "outputId": "9f41712d-e5e4-4efa-c685-3e683952c647",
@@ -263,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "QUKh7B1jbVRx"
       },
@@ -284,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "iQvDyAj5bVRz",
         "outputId": "85fb9280-e578-472b-9c14-303487a1db86",
@@ -659,7 +659,7 @@
         "id": "IBsrNYEubVSC"
       },
       "source": [
-        "# Filtering noise\n",
+        "## Filtering noise\n",
         "\n",
         "One practical use for PCA is filtering noise from data. The basic approach is to PCA-transform the dataset and then invert the transform, taking the dataset from *m* dimensions to *n* and then back to *m*. Here we demonstrate by artificially adding noise to the LFW faces."
       ]
